--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>dependency-management-bom</module>
         <module>dto</module>
         <module>utils</module>
+        <module>migration</module>
     </modules>
 
     <dependencies>
